--- a/Day 1 - Beginner - Introduction To Python and Data Types.ipynb
+++ b/Day 1 - Beginner - Introduction To Python and Data Types.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "d487dd77",
    "metadata": {},
    "outputs": [
@@ -94,6 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'str'>\n",
       "<class 'str'>\n",
       "<class 'str'>\n",
       "<class 'str'>\n",
@@ -113,7 +114,8 @@
     "print(type('1.0'))\n",
     "print(type(\"1.111\"))\n",
     "print(type('True'))\n",
-    "print(type('None'))"
+    "print(type('None'))\n",
+    "print(type(\"\"))"
    ]
   },
   {
