--- a/Day 2 - Beginner - Operators and Control Statements.ipynb
+++ b/Day 2 - Beginner - Operators and Control Statements.ipynb
@@ -13,7 +13,6 @@
     "5. Multiplication\n",
     "6. Floor Division(//)\n",
     "7. To the power(**)\n",
-    "\n",
     "##### 2. Comparison Operators\n",
     "1. \"==\"\n",
     "2. \"!=\"\n",
@@ -21,19 +20,16 @@
     "4. \">\"\n",
     "5. \"<=\"\n",
     "6. \">=\"\n",
-    "\n",
     "##### 3. Assignment Operators\n",
     "1. \"-=\"\n",
     "2. \"+=\"\n",
     "3. \"/=\"\n",
     "4. \"*=\"\n",
     "5. \"//=\"\n",
-    "\n",
     "###### 4. Logical Operators\n",
     "1. and\n",
     "2. or\n",
     "3. not\n",
-    "\n",
     "##### 5. Conditional Statements\n",
     "1. if statement\n",
     "2. if-else statement\n",
@@ -1141,7 +1137,7 @@
     "elif rating < 1400 and rating % 2 != 0:\n",
     "    print(\"newbie\")\n",
     "else:\n",
-    "    print(\"NEWBIE\")\n"
+    "    print(\"NEWBIE\")"
    ]
   },
   {
