--- a/Day 3 - Beginner - Iteration 1.ipynb
+++ b/Day 3 - Beginner - Iteration 1.ipynb
@@ -460,6 +460,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "7317747f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANIL 5\n",
+      "ANIL 4\n",
+      "ANIL 3\n",
+      "ANIL 2\n",
+      "ANIL 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 5\n",
+    "j = 1\n",
+    "while i >=1:\n",
+    "    print(\"ANIL\",i)\n",
+    "    \n",
+    "    i=i-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef829a24",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f82969a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "462e9faf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffc2f4c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84b29bc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0abcc38",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea30011",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "1e0c6cea",
    "metadata": {},
