--- a/Day 4 - Beginner - Iteration 2.ipynb
+++ b/Day 4 - Beginner - Iteration 2.ipynb
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "id": "078da3ad",
    "metadata": {},
    "outputs": [
@@ -511,6 +511,255 @@
     "    x=x+1\n",
     "    print(i, end= \" \")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9442a1bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "*   *\n",
+      "*   *\n",
+      "*   *\n",
+      "*   *\n",
+      "*   *\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "\n",
+    "for i in range(N):\n",
+    "    print('*'+(N-2)*' '+'*')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ac688cb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "200\n",
+      "212\n",
+      "That is a large sum!\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "if N>10 and N <20:\n",
+    "    M = int(input())\n",
+    "    if N+M > 100:\n",
+    "        print(N+M) \n",
+    "        print('That is a large sum!')\n",
+    "    else:\n",
+    "        print(N+M)\n",
+    "else:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "58e7ef79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1 2 3 4 5\n",
+      "1 2 3 4\n",
+      "1 2 3\n",
+      "1 2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "\n",
+    "for rows in range(N,0,-1):\n",
+    "    for columns in range(1,rows+1):\n",
+    "        if columns != rows:\n",
+    "            print(columns,end=' ')\n",
+    "        else:\n",
+    "            print(columns,end='')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "9ed72b27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 "
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/d5/69jtbknd1wn8hrt978b9pl2w0000gn/T/ipykernel_955/2619700374.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mwhile\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m<=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m      \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m      \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "while i<=5:\n",
+    "     if i%2:\n",
+    "        pass\n",
+    "     else:\n",
+    "        print(i, end=\" \")\n",
+    "        i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "c42fe2f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=2\n",
+    "if i==2:\n",
+    "    i+=1\n",
+    "for j in range(i):\n",
+    "    pass\n",
+    "    break\n",
+    "    i+=1\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "cd641d43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exec "
+     ]
+    }
+   ],
+   "source": [
+    "n=8\n",
+    "while n>=0:\n",
+    "   n -= 2\n",
+    "   if n%2==0:\n",
+    "       continue\n",
+    "   print(n, end=\" \")\n",
+    "else:\n",
+    "   print(\"Exec\", end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "374058b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 : 0 1 : 2 2 : 4 "
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "j = 0\n",
+    "while i <= 2:\n",
+    "   if j%2:\n",
+    "       j += 1\n",
+    "   print(i, \":\", j, end=\" \")\n",
+    "   i+=1\n",
+    "   j+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "bb2a8701",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 "
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "if i==0:\n",
+    "   pass\n",
+    "   print(i, end=\" \")\n",
+    "i+=1\n",
+    "print(i, end=\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "0a7c0912",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert(t):\n",
+    "    return t*9/5 + 32\n",
+    "\n",
+    "print(convert(20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69a8ccc7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
