--- a/Day 5 - Beginner - Functions.ipynb
+++ b/Day 5 - Beginner - Functions.ipynb
@@ -254,13 +254,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "03d2c9b4",
    "metadata": {},
    "outputs": [],
    "source": [
-    " "
+    " def road_tax(price):\n",
+    "    tax = None\n",
+    "\n",
+    "    if price > 100000:\n",
+    "        tax = 20\n",
+    "    elif price > 75000 and price <= 100000:\n",
+    "        tax = 15\n",
+    "    elif price > 50000 and price <= 75000:\n",
+    "        tax = 10\n",
+    "    elif price <=50000:\n",
+    "        tax = (50000/5)*100\n",
+    "\n",
+    "    return round(tax,1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "042767ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sequence(n):\n",
+    "    for i in range(1,n+1):\n",
+    "        print(i,end=' ')\n",
+    "    print('\\n')\n",
+    "    for j in range(0,n):\n",
+    "        print(n-j,end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "6ca93b5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "1 2 3 4 5 6 7 8 9 10 "
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "for i in range(1,n+1):\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a60e1f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
